# boids-wasm

./: 3.5d742acf994a8c377bb9.js  3.5d742acf994a8c377bb9.js.LICENSE.txt  3.5d742acf994a8c377bb9.js.br  826.56c25696c45d4e4cf8f4.js  826.56c25696c45d4e4cf8f4.js.map  Cargo.toml  README.md  index.html  main.d53fb29e623814239edb.js  main.d53fb29e623814239edb.js.map
example/: .eslintrc  .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/src/: custom.d.ts  index.css  index.html  index.ts
example/src/boids-wasm/: boids_wasm.d.ts  boids_wasm.js  boids_wasm_bg.js  boids_wasm_bg.wasm  boids_wasm_bg.wasm.d.ts
example/src/components/: Boid.ts  Boids.ts  BoidsUI.ts  index.ts
src/: boid.rs  lib.rs
