[package]
name = "boids-wasm"
version = "0.1.0"
authors = ["Leonid <leonidgrr@gmail.com>"]
license="MIT"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ncollide3d = "0.23.0"
lazy_static = "1.4.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]